--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#448AFF</color>
     <color name="colorPrimaryDark">#536DFE</color>
     <color name="colorAccent">#44D81B</color>
-    <color name="backgroundColor">#F5FFFF</color>
+    <color name="backgroundColor">#F5F5F5</color>
 </resources>
