--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,37 +14,45 @@
   ~ limitations under the License.
   -->
 
-<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory app:title="@string/messages_header">
 
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true" />
+    <PreferenceCategory app:title="@string/language">
 
         <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
+            app:key="language"
+            app:defaultValue="english"
+            app:entries="@array/languages_entries"
+            app:entryValues="@array/languages_values"
+            app:title="@string/def_lang"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/dark_mode">
 
         <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+            app:key="dark_mode"
+            app:summaryOff="The app is in 'Light mode'"
+            app:summaryOn="The app is in 'Dark mode'"
+            app:title="Enable Dark Mode" />
 
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="@string/storage">
+
+        <ListPreference
+        app:key="storage"
+        app:defaultValue="0"
+        app:entries="@array/delete_entries"
+        app:entryValues="@array/delete_values"
+        app:title="@string/del_after"
+        app:useSimpleSummaryProvider="true" />
+
+        <Preference android:title="@string/del_stat"
+            android:key="del_now"
+            android:summary="@string/del_stat_now"/>
 
     </PreferenceCategory>
 
