--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -88,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Country --> Argument --> Indicator"
         app:backgroundTint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
